app/k8s/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gastos-app-ingressroute
  namespace: gastos-app
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`app.kenneth-rivera.com`)
      kind: Rule
      services:
        - name: gastos-app-service
          port: 80
